--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <a href="https://https://www.youtube.com/watch?v=GVqu9Yw3BY0">
                 <img src="https://img.youtube.com/vi/GVqu9Yw3BY0/maxresdefault.jpg" />
             </a>
-            <a href="https://https://www.youtube.com/watch?v=3dK2-f_oo10">
-                <img src="https://img.youtube.com/vi/3dK2-f_oo10/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=3dK2-f_oo10c">
+                <img src="https://img.youtube.com/vi/3dK2-f_oo10c/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=23MHobjPqsg">
                 <img src="https://img.youtube.com/vi/23MHobjPqsg/maxresdefault.jpg" />
